--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 <!--	  EPFL, IDIAP-->
 <!--	</p>-->
 
+<p class="text-muted">
+Project page for the Deep-Occlusion Multi-Camera Multi-People tracker.
+</p>
+<p class="text-muted">
+<a href ="https://arxiv.org/abs/1704.05775"> Arxiv paper </a> and  <a href="https://github.com/pierrebaque/DeepOcclusion">code</a> are available.
+</p>
+
 
 	<h5 class="jumbotron-heading">Abstract</h5>
     <p class="text-muted">
